fix pokemon image height and width on mobile

--- a/portfolio/src/app/projects/pokemon/dialog-overview-example-dialog.scss
+++ b/portfolio/src/app/projects/pokemon/dialog-overview-example-dialog.scss
@@ -145,6 +145,8 @@
 
   .pokedex-image {
     flex-basis: 100%;
+    height: 200px;
+    width: 200px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     border: 1px solid black;
